5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1745_1532.log
== TEST (2019-05-15 14:56:09) 
-- CODE:
factorial math import*

x = int(input(""))
k = float(input(""))

k>0

while (k > 0):
	
-- ERROR:
File "XXXX", line 1
    factorial math import*
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:19) 
-- CODE:
x = int(input(""))
k = float(input(""))

k>0

while (k > 0):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:37) 
-- CODE:
x = int(input(""))
k = float(input(""))

while (k > 0):
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:42) 
-- CODE:
x = int(input(""))
k = float(input(""))

while (k > 0):
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:57) 
-- CODE:
x = int(input(""))
k = float(input(""))

while (k > 0):
		k > k + 1
	if()
-- ERROR:
File "XXXX", line 6
    if()
       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
